Fixed Slash Command Suggestions overflowing / scroll issue on mobile

--- a/src/scss/User Interface/mobileAdjustments.scss
+++ b/src/scss/User Interface/mobileAdjustments.scss
@@ -106,10 +106,6 @@ body.is-mobile {
 			border-radius: var(--radius-m);
 		}
 
-		.suggestion {
-			max-height: unset;
-		}
-
 		.community-modal-controls {
 			background-color: var(--background-secondary);
 		}
